--- a/ServiceY/ServiceY.csproj
+++ b/ServiceY/ServiceY.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Maps.MapControl.WPF">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Bing Maps WPF Control\V1\Libraries\Microsoft.Maps.MapControl.WPF.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -49,18 +52,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine.cs" />
+    <Compile Include="EngineORS.cs" />
     <Compile Include="Feature.cs" />
+    <Compile Include="FeatureORS.cs" />
     <Compile Include="Geocoding.cs" />
     <Compile Include="Geometry.cs" />
+    <Compile Include="GeometryORS.cs" />
     <Compile Include="IRequestY.cs" />
     <Compile Include="Lang.cs" />
+    <Compile Include="MetadataORS.cs" />
     <Compile Include="ParsedText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties.cs" />
+    <Compile Include="PropertiesORS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
+    <Compile Include="QueryORS.cs" />
     <Compile Include="RequestY.cs" />
+    <Compile Include="ResponseORS.cs" />
     <Compile Include="RootJSON.cs" />
+    <Compile Include="SummaryORS.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
