added method which gets list of places inside bike area

--- a/ServiceTourism/ServiceTourism.csproj
+++ b/ServiceTourism/ServiceTourism.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Maps.MapControl.WPF">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Bing Maps WPF Control\V1\Libraries\Microsoft.Maps.MapControl.WPF.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -47,11 +50,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address.cs" />
+    <Compile Include="CategoryTypeConverter.cs" />
+    <Compile Include="GroupConverter.cs" />
     <Compile Include="IRequestT.cs" />
+    <Compile Include="ItemTypeConverter.cs" />
+    <Compile Include="ParseStringConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestT.cs" />
+    <Compile Include="ResponseJSON.cs" />
+    <Compile Include="SystemEnumConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
