began tourism itinerary

--- a/ServiceTourism/ServiceTourism.csproj
+++ b/ServiceTourism/ServiceTourism.csproj
@@ -65,5 +65,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceY\ServiceY.csproj">
+      <Project>{92F40843-02BA-4790-9853-9695A5392AB6}</Project>
+      <Name>ServiceY</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
