--- a/ServiceTourism/App.config
+++ b/ServiceTourism/App.config
@@ -3,4 +3,40 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <system.serviceModel>
+    <services>
+      <service name="ServiceTourism.RequestT">
+        <endpoint address="SOAPendpoint"
+                  binding="basicHttpBinding"
+                  bindingConfiguration=""
+                  name="SOAPendpoint"
+                  bindingName=""
+                  contract="ServiceTourism.IRequestT">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+    </services>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="jsonBehavior">
+          <!--enableWebScript/-->
+          <webHttp/>
+        </behavior>
+      </endpointBehaviors>
+      <serviceBehaviors>
+        <behavior>
+          <!-- Pour éviter la divulgation d'informations de métadonnées, 
+          définissez les valeurs ci-dessous sur false avant le déploiement -->
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <!-- Pour recevoir les détails de l'exception dans les erreurs à des fins de débogage, 
+          définissez la valeur ci-dessous sur true.  Pour éviter la divulgation d'informations d'exception, 
+          définissez-la sur false avant le déploiement -->
+          <serviceDebug includeExceptionDetailInFaults="False" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
 </configuration>
